--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,10 @@ h2 {
   letter-spacing: -1px;
 }
 
+section {
+  margin: 64px 0;
+}
+
 p {
   margin: 16px 0;
   line-height: 2rem;
@@ -47,8 +51,43 @@ p {
 }
 
 .hero-wrapper {
+  margin: 0;
   min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  & + section {
+    margin-top: 0;
+  }
+}
+
+.timeline {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  row-gap: 1rem;
+  column-gap: 1em;
+
+  .timeline-item {
+    padding: 16px;
+    border-radius: 16px;
+    max-height: 80px;
+    background-color: #eeeeee;
+    overflow: hidden;
+  }
+
+  .tl-row1-column1-5 {
+    grid-row: 1/1;
+    grid-column: 1/5;
+  }
+
+  .tl-row2-column3-7 {
+    grid-row: 2/2;
+    grid-column: 3/7;
+  }
+
+  .tl-row3-column8-11 {
+    grid-row: 3/3;
+    grid-column: 7/11;
+  }
 }
